[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.5 patchlevel 5                                 ??? ??, 2013

Fixes:
 * Commands which take multiple right-hand-side arguments could only have
   8191-length arguments, instead of the usual 8192. Reported by Jules. [MG]

Minor changes:
 * strreplace() now works harder to keep existing ANSI intact, when you
   replace an un-ansi'd string into an ansi'd one. [MG]
 * colors(...,xterm256) can now return colors 0 to 15, to avoid confusion
   when converting xterm -> hex -> xterm. Reported by Trinsec. [MG]

Version 1.8.5 patchlevel 4                                 Mar 17, 2013

Major changes:
 * The player_name_len @config option is now the maximum length of a player
   name, instead of the maximum length+1, because doing it that way was
   rather silly. You may wish to lower yours by 1 now to compensate.
   Suggested by Mercutio. [MG]
 * Having unescaped commas in the final arg of a function call is now
   deprecated, and will eventually become illegal. Any existing code which
   does this will spam you with a warning until you change it. [MG]
 * The stack (%0-%9) can now hold up to 30 arguments, with the additional 20
   available through v(10) to v(29). $-commands, @functions and many built-in
   commands and functions (such as ufun(), @mapsql, etc) now make use of
   these args. [MG] [MUX] [Rhost]

Commands:
 * @dolist now accepts /inline and related switches, like @switch does.
   Suggested by Reaver. [MG]
 * @teleport/list teleports a list of objects to a single destination.
   Suggested by Nyssa, [MUX]. [MG]
 * @sockset and SOCKSET can now show/set PROMPT_NEWLINES. [MG]
 * @halt now takes a /noeval switch, and will always strip curly braces when
   run /noeval. [MG]
 * Added @mail/cstats, which shows the mail stats you see on connection.
   Patch by spork.