@@ -31,6 +31,7 @@
 #ifdef I_UNISTD
 #include <unistd.h>
 #endif
+#include <ctype.h>
 #include <string.h>
 #include <stdlib.h>
 
@@ -110,6 +111,7 @@ static sqlite3_stmt *penn_sqlite3_sql_query(const char *, int *);
 static void penn_sqlite3_free_sql_query(sqlite3_stmt *);
 #endif
 static sqlplatform sql_platform(void);
+static char *sql_sanitize(char *res);
 
 /* A helper function to translate SQL_PLATFORM into one of our
  * supported platform codes. We remember this value, so a reboot
@@ -136,6 +138,23 @@ sql_platform(void)
     platform = SQL_PLATFORM_SQLITE3;
 #endif
   return platform;
+}
+
+static char *
+sql_sanitize(char *res) {
+  static char buff[BUFFER_LEN];
+  char *bp = buff, *rp = res;
+
+  for (; *rp; rp++) {
+    if (isprint((unsigned char) *rp) || *rp == '\n' || *rp == '\t' ||
+         *rp == ESC_CHAR || *rp == TAG_START || *rp == TAG_END ||
+         *rp == BEEP_CHAR) {
+      *bp++ = *rp;
+    }
+  }
+  *bp = '\0';
+
+  return buff;
 }
 
 /* Initialize a connection to an SQL database */
@@ -325,7 +344,7 @@ FUNCTION(fun_sql_escape)
     return;
   }
   if (chars_written < BUFFER_LEN)
-    safe_str(bigbuff, buff, bp);
+    safe_str(sql_sanitize(bigbuff), buff, bp);
   else
     safe_str(T("#-1 TOO LONG"), buff, bp);
 }
@@ -478,7 +497,7 @@ COMMAND(cmd_mapsql)
         snprintf(strrownum, 20, "%d", 0);
         names[0] = strrownum;
         for (i = 0; i < (numfields + 1) && i < MAX_STACK_ARGS; i++) {
-          pe_regs_setenv(pe_regs, i, names[i]);
+          pe_regs_setenv(pe_regs, i, sql_sanitize(names[i]));
         }
         queue_attribute_base(thing, s, executor, 0, pe_regs, 0);
       }
@@ -488,7 +507,7 @@ COMMAND(cmd_mapsql)
       cells[0] = strrownum;
       pe_regs_clear(pe_regs);
       for (i = 0; i < (numfields + 1) && i < MAX_STACK_ARGS; i++) {
-        pe_regs_setenv(pe_regs, i, cells[i]);
+        pe_regs_setenv(pe_regs, i, sql_sanitize(cells[i]));
       }
       pe_regs_qcopy(pe_regs, queue_entry->pe_info->regvals);
       queue_attribute_base(thing, s, executor, 0, pe_regs, 0);
@@ -616,6 +635,7 @@ COMMAND(cmd_sql)
           break;
         }
         if (cell && *cell) {
+          cell = sql_sanitize(cell);
           if (strchr(cell, TAG_START) || strchr(cell, ESC_CHAR)) {
             /* Either old or new style ANSI string. */
             tbp = tbuf;
@@ -716,17 +736,17 @@ FUNCTION(fun_mapsql)
       switch (sql_platform()) {
 #ifdef HAVE_MYSQL
       case SQL_PLATFORM_MYSQL:
-        pe_regs_setenv(pe_regs, i + 1, fields[i].name);
+        pe_regs_setenv(pe_regs, i + 1, sql_sanitize(fields[i].name));
         break;
 #endif
 #ifdef HAVE_POSTGRESQL
       case SQL_PLATFORM_POSTGRESQL:
-        pe_regs_setenv(pe_regs, i + 1, PQfname(qres, i));
+        pe_regs_setenv(pe_regs, i + 1, sql_sanitize(PQfname(qres, i)));
         break;
 #endif
 #ifdef HAVE_SQLITE3
       case SQL_PLATFORM_SQLITE3:
-        pe_regs_setenv(pe_regs, i + 1, (char *) sqlite3_column_name(qres, i));
+        pe_regs_setenv(pe_regs, i + 1, sql_sanitize((char *) sqlite3_column_name(qres, i)));
         break;
 #endif
       default:
@@ -784,6 +804,7 @@ FUNCTION(fun_mapsql)
         break;
       }
       if (cell && *cell) {
+        cell = sql_sanitize(cell);
         if (strchr(cell, TAG_START) || strchr(cell, ESC_CHAR)) {
           /* Either old or new style ANSI string. */
           tbp = buffs[i];
@@ -927,6 +948,7 @@ FUNCTION(fun_sql)
         break;
       }
       if (cell && *cell) {
+        cell = sql_sanitize(cell);
         if (strchr(cell, TAG_START) || strchr(cell, ESC_CHAR)) {
           /* Either old or new style ANSI string. */
           tbp = tbuf;
